--- a/public/pl/projektowanie/ruchytektoniczne/index.html
+++ b/public/pl/projektowanie/ruchytektoniczne/index.html
@@ -52,7 +52,7 @@
         <div class="rotate-7 group-hover:rotate-0 transition-transform duration-200">Maria</div>
         <div class="-rotate-2 group-hover:rotate-0 transition-transform duration-200">Mazurkiewicz</div>
       </div>
-      <span class="absolute left-0 bottom-[3px] w-full h-[2px] xl:h-[3px] bg-stone-900 dark:bg-gray-300 opacity-0 transition-opacity delay-200 group-hover:opacity-100"></span>
+      <span class="absolute left-0 bottom-0.75 w-full h-0.5 xl:h-0.75 bg-stone-900 dark:bg-gray-300 opacity-0 transition-opacity delay-200 group-hover:opacity-100"></span>
     </a>
   </div>
 
@@ -60,7 +60,7 @@
   
   <button id="menu-toggle"
           class="lg:hidden uppercase tracking-tighter font-medium focus:outline-none relative
-                 after:content-[''] after:absolute after:left-0 after:-bottom-0 after:w-full after:h-[2px] after: dark:bg-stone-900 after:dark:bg-gray-300 after:opacity-0 hover:after:opacity-100 after:transition-opacity after:duration-0 z-50 leading-none cursor-pointer">
+                 after:content-[''] after:absolute after:left-0 after:bottom-0 after:w-full after:h-0.5 after: dark:bg-stone-900 after:dark:bg-gray-300 after:opacity-0 hover:after:opacity-100 after:transition-opacity after:duration-0 z-50 leading-none cursor-pointer">
     MENU
   </button>
 
@@ -123,7 +123,7 @@
     <h2 class="text-center mb-20">2022</h2>
     
     <div id="column">
-        <p>Od 18 listopada 2022 roku do 19 marca 2023 roku w Muzeum Sztuki w Łodzi (ms1) miała miejsce wystawa <em>Ruchy tektoniczne. O artystycznych symptomach transformacji</em>. Kurator Jakub Banasiak wybrał ponad sto dzieł stworzonych w latach 80. i 90. XX wieku w Polsce, kiedy PRL przekształcała się w III RP. Narracja wystawy została poprowadzona dwutorowo. Pierwsza ścieżka dotyczyła materii – kwestii gospodarczych i politycznych, druga skupiała się na metafizyce i przedstawiała różnorodność postaw duchowych czasów transformacji.</p>
+        <p>Od 18 listopada 2022 do 19 marca 2023 roku w Muzeum Sztuki w Łodzi (ms1) miała miejsce wystawa <em>Ruchy tektoniczne. O artystycznych symptomach transformacji</em>. Kurator Jakub Banasiak wybrał ponad sto dzieł stworzonych w latach 80. i 90. XX wieku w Polsce. To wtedy PRL przekształcała się w III RP. Narracja wystawy została poprowadzona dwutorowo. Pierwsza ścieżka dotyczyła materii – kwestii gospodarczych i politycznych, druga skupiała się na metafizyce i przedstawiała różnorodność postaw duchowych czasów transformacji.</p>
 <p>W identyfikacji wizualnej zastosowałem font Labil Grotesk, którego przechylone, chwiejne znaki nawiązują do tytułowych ruchów tektonicznych, niestabilności i niejednoznaczności epoki.</p>
 <div class="flex flex-col md:flex-row md:space-x-4">
     <div class="one-image">
@@ -167,7 +167,7 @@
 </div>
     </div>
 </div>
-<p>Plakaty bazowały na najbardziej ikonicznych pracach pokazywanych na wystawie: <em>Wulkanie</em> Marioli Przyjemskiej, <em>Posiłkach najuboższych</em> Pawła Kwieka, kadrze z filmu <em>Emigrant</em> Wilhelma Sasnala i pracy bez tytułu Piotra Uklańskiego.</p>
+<p>Plakaty bazują na najbardziej ikonicznych pracach pokazywanych na wystawie: <em>Wulkanie</em> Marioli Przyjemskiej, <em>Posiłkach najuboższych</em> Pawła Kwieka, kadrze z filmu <em>Emigrant</em> Wilhelma Sasnala i pracy bez tytułu Piotra Uklańskiego.</p>
 <p><div>
 <img
   src="/images/ruchytektoniczne/ruchytektoniczne_05.webp"
@@ -176,7 +176,7 @@
   decoding="async"
 />
 </div></p>
-<p>Proces projektowy oparłem na papierowej makiecie w skali 1:100, będącej punktem wyjścia do przygotowania produkcyjnych rozrysów ścian i rzutów. Fizyczny model pozwala na sprawne testowanie rozmieszczenia obiektów w salach i intuicyjne wyczucie skali. To również rozwiązanie pomocne podczas spotkań warsztatowych i rozmów z kuratorem.</p>
+<p>Proces projektowy oparłem na papierowej makiecie w skali 1:100, będącej punktem wyjścia do przygotowania produkcyjnych rozrysów ścian i rzutów. Fizyczny model pozwala na sprawne testowanie rozmieszczenia obiektów w salach i intuicyjne wyczucie skali. Było to również rozwiązanie pomocne podczas spotkań warsztatowych i rozmów z kuratorem.</p>
 <div class="flex flex-col md:flex-row md:space-x-4">
     <div class="one-image">
       <div>
@@ -275,7 +275,7 @@
 </div>
     </div>
 </div>
-<p>Ekspozycja wymagała skonstruowania dedykowanych elementów etalażu w dekoracyjnej sali lustrzanej. Zastosowałem kontrastową do ozdobności ścian konstukcję z surowej sklejki. Umieściłem na niej dwustronne ramy służące do prezentacji odbitej na rewersie plakatu wyborczego grafiki Egona Fitke i dwustronnego obrazu Karola Suki.</p>
+<p>Ekspozycja wymagała skonstruowania dedykowanych elementów etalażu w dekoracyjnej sali lustrzanej. Zastosowałem kontrastową do ozdobnych ścian konstukcję z surowej sklejki. Umieściłem na niej dwustronne ramy, które posłużyły do prezentacji odbitej na rewersie plakatu wyborczego grafiki Egona Fietke oraz dwustronnego obrazu Karola Suki.</p>
 <div class="flex flex-col md:flex-row md:space-x-4">
     <div class="one-image">
       <div>
@@ -332,7 +332,7 @@
   decoding="async"
 />
 </div></p>
-<p>Kolorystykę sekcji duchowej oparłem na ciemnych szarościach, żółcieni i ziemistych barwach. Tematy polityczno-gospodarcze zostały wyróżnione bielą, czerwienią i jasną szarością.</p>
+<p>Kolorystyka sekcji duchowej to ciemne szarości, żółcień i ziemiste barwy. Tematy polityczno-gospodarcze zostały wyróżnione bielą, czerwienią i jasną szarością.</p>
 <div class="flex flex-col md:flex-row md:space-x-4">
     <div class="one-image">
       <div>
@@ -399,7 +399,7 @@
 </div>
     </div>
 </div>
-<p>Oprócz dzieł sztuki: obrazów, rysunków, rzeźb, instacji i prac wideo, na wystawie zaprezentowane zostały również archiwalia i dokumenty życia społecznego. Procesy i przemiany okresu transformacji przeanalizowane zostały przy pomocy wykresów i osi czasów. Warstwa infograficzna ekspozycji  pozwoliła na obrazowe przedstawienie złożonych zależności.</p>
+<p>Oprócz dzieł sztuki: obrazów, rysunków, rzeźb, instalacji i prac wideo, na wystawie zaprezentowane zostały również archiwalia i dokumenty życia społecznego. Procesy i przemiany okresu transformacji przeanalizowane zostały przy pomocy wykresów i osi czasu. Warstwa infograficzna ekspozycji  pozwoliła na obrazowe przedstawienie złożonych zależności.</p>
 <div class="flex flex-col md:flex-row md:space-x-4">
     <div class="one-image">
       <div>
